src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.Privacy_1__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Privacy2__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Privacy1__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Eventi Privati / Task</relationshipLabel>
        <relationshipName>Attivita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Dati_Ecommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Dati E-commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Causale_Reso__c</fullName>
        <label>Causale Reso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta__c</fullName>
        <formula>Account__r.PersonMailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Città</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_input__c</fullName>
        <label>Città (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Cliente__c</fullName>
        <formula>Account__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cognome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Cliente_input__c</fullName>
        <label>Cognome Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contatti_Negozio__c</fullName>
        <formula>Location__r.Indirizzo__c &amp; BR() &amp; Location__r.Citta__c &amp; BR() &amp; Location__r.Telefono__c</formula>
        <label>Contatti Negozio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Appuntamento__c</fullName>
        <label>Data Appuntamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Elenco_Prodotti_Resi__c</fullName>
        <label>Elenco Prodotti Resi</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Cliente__c</fullName>
        <formula>Account__r.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Cliente_input__c</fullName>
        <label>Email Cliente (input)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ID_Store__c</fullName>
        <label>ID Store</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <label>Id Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Ordine__c</fullName>
        <label>Id Ordine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Reso__c</fullName>
        <label>Id Reso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lingua_di_Preferenza__c</fullName>
        <formula>text(Account__r.Lingua__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lingua di Preferenza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lingua_di_Preferenza_input__c</fullName>
        <label>Lingua di Preferenza (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nazione__c</fullName>
        <formula>Account__r.PersonMailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nazione_input__c</fullName>
        <label>Nazione (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Cliente__c</fullName>
        <formula>Account__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Cliente_input__c</fullName>
        <label>Nome Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordine</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Attività</relationshipLabel>
        <relationshipName>Attivita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origine_Task__c</fullName>
        <label>Origine Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantita__c</fullName>
        <label>Quantità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reso</label>
        <referenceTo>Transaction_Detail__c</referenceTo>
        <relationshipLabel>Attività</relationshipLabel>
        <relationshipName>Attivita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scala_di_valutazione__c</fullName>
        <label>Scala di valutazione</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheda_Prodotto__c</fullName>
        <label>Scheda Prodotto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sesso__c</fullName>
        <formula>text( Account__r.Sesso__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sesso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sesso_input__c</fullName>
        <label>Sesso (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telefono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_input__c</fullName>
        <label>Telefono (input)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <label>Tipologia</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titolo_Cliente__c</fullName>
        <formula>TEXT(Account__r.Salutation)</formula>
        <label>Titolo Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titolo_Cliente_input__c</fullName>
        <label>Titolo Cliente (input)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wishlist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wishlist</label>
        <referenceTo>Wishlist__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>